zmake (1.7-1) bookworm jammy kinetic lunar; urgency=medium

  * First debian build

 -- MelianMiko <melianmiko@gmail.com>  Sat, 15 Apr 2023 23:06:56 +0700
